test/integration/bad/new/ill-formed-statement24.stan
transformed data { if ( 1 ) ; foo}
